--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
 	    <title>Portfolio</title>
 	  </head>
     <body background="images/flower.jpeg">
-    <background-repeat:no-repeat>
+    <body background-repeat:no-repeat>
     <background-attachment:fixed;>
     <a href="index.html">Home</a>
     <a href="portfolio.html">Portfolio</a>
