--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Home</title>
   </head>
-  <body>
+    <body background="images/flower.jpeg">
     <a href="index.html">Home</a>
     <a href="portfolio.html">Portfolio</a>
     <h1>This is my test Home Page!</h1>
