--- a/214/ice.html
+++ b/214/ice.html
@@ -14,7 +14,7 @@
       <tr><td>3</td><td>Chocolate</td><td></td></tr>
       <tr><td>4</td><td>Cookies and Cream</td></tr>
       <tr><td>5</td><td>Mint Chocolate Chip</td></tr>
-      <img src="cookie.jpeg" alt="Picture of Cookies" />
+      <center><img src="cookie.jpeg" alt="Picture of Cookies" /><center>
     </table>
   </body>
 </html>
