done with html 1

--- a/project/1.html
+++ b/project/1.html
@@ -3,24 +3,61 @@
   <head>
      <link rel="stylesheet" href="scc.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>test</title>
-    <style>
-
-    </style>
+    <title>About Me</title>
     </head>
 <body>
     <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
     
     
-<div id="navbar">
-  <a herf="2.html">Html 2</a>
-  <a herf="https://www.google.com">google</a>
-</div>
+    <div id="navbar">
+      <a href="1.html">About me</a>
+      <a href="2.html">cool stuff</a>
+      <a href="https://www.w3schools.com/">w3schools</a>
+    </div>
+    <center>
+        <h1>Welcome to my site.</h1>
+        <table style="width:80%">
+            <tr>
+                <th>class Name</th>
+                <th>Period #</th>
+            </tr>
+            <tr>
+                <th>Adv. Band</th>
+                <th>1</th>
+            </tr>
+            <tr>
+                <th>Computer science principle</th>
+                <th>2</th>
+            </tr>
+            <tr>
+                <th>English 11</th>
+                <th>3</th>
+            </tr>
+            <tr>
+                <th>Animation</th>
+                <th>4</th>
+            </tr>
+            <tr>
+                <th>American Sign Language</th>
+                <th>5</th>
+            </tr>
+            <tr>
+                <th>Physics</th>
+                <th>6</th>
+            </tr>
+            <tr>
+                <th>American History</th>
+                <th>7</th>
+            </tr>
+            <tr>
+                <th>Integrated Math III
+                <th>8
+            </tr>
+        </table>
+            <p><br><br><br><br><br><br></p>
 
-
-<div style="padding:15px 15px 2500px;font-size:30px">
-<p></p>
-</div>
+        <img src="image/table.jpg" alt="This is table">
+    </center>
 
 <script>
 // When the user scrolls down 20px from the top of the document, show the button
