--- a/project/2.html
+++ b/project/2.html
@@ -3,8 +3,43 @@
     <head>
         <link rel="stylesheet" href="scc.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>test</title>
+        <title>Cool Place</title>
     </head>
 <body>
-    
+    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+            <div id="navbar">
+      <a href="1.html">Home</a>
+      <a href="2.html">About me</a>
+      <a href="https://www.google.com">google</a>
+            </div>
+        <center>
+        <h1>Welcome to my site.</h1>
+
+
+
+    </center>
+
+
+<script>
+// When the user scrolls down 20px from the top of the document, show the button
+window.onscroll = function() {scrollFunction()};
+
+function scrollFunction() {
+    if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+        document.getElementById("myBtn").style.display = "block";
+    } else {
+        document.getElementById("myBtn").style.display = "none";
+    }
+      if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 10) {
+    document.getElementById("navbar").style.top = "0";
+  } else {
+    document.getElementById("navbar").style.top = "-50px";
+  }
+}
+// When the user clicks on the button, scroll to the top of the document
+function topFunction() {
+    document.body.scrollTop = 0;
+    document.documentElement.scrollTop = 0;
+}
+</script>
 </body>
