--- a/project/1.html
+++ b/project/1.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>About Me</title>
     </head>
-<body>
+<body bgcolor= pink>
     <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
     
     
