--- a/project/1.html
+++ b/project/1.html
@@ -26,7 +26,7 @@
                 <th>1</th>
             </tr>
             <tr>
-                <th>Computer science principle</th>
+                <th>Computer Science Principle</th>
                 <th>2</th>
             </tr>
             <tr>
@@ -34,7 +34,7 @@
                 <th>3</th>
             </tr>
             <tr>
-                <th>Animation</th>
+                <th>Film Animation</th>
                 <th>4</th>
             </tr>
             <tr>
@@ -46,7 +46,7 @@
                 <th>6</th>
             </tr>
             <tr>
-                <th>American History</th>
+                <th>US History</th>
                 <th>7</th>
             </tr>
             <tr>
