--- a/project/2.html
+++ b/project/2.html
@@ -8,7 +8,7 @@
             
       
     </head>
-<body bgcolor= blue;>
+<body bgcolor= lightblue>
     <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
             <div id="navbar">
       <a href="1.html">Home</a>
@@ -18,9 +18,7 @@
     <center>
         <h1>Welcome to the cool place</h1>
      <img src="image/coolstuff.jpg" alt="cool stuf" style="width:750px;height:500px;">
-     <p><br>scroll to go back to home or to w3schools</p>
-
-
+     <p><br>Scroll down to go back to home or to w3schools.</p>
     </center>
 <p><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br></p>
 
