--- a/project/2.html
+++ b/project/2.html
@@ -13,7 +13,7 @@
             <div id="navbar">
       <a href="1.html">Home</a>
       <a href="2.html">About me</a>
-      <a href="https://www.google.com">google</a>
+      <a href="https://www.w3schools.com/">w3schools</a>
             </div>
     <center>
         <h1>Welcome to the cool place</h1>
