2.html cool stuff

--- a/project/1.html
+++ b/project/1.html
@@ -11,7 +11,7 @@
     
     <div id="navbar">
       <a href="1.html">About me</a>
-      <a href="2.html">cool stuff</a>
+      <a href="2.html">Cool stuff</a>
       <a href="https://www.w3schools.com/">w3schools</a>
     </div>
     <center>
