--- a/project/2.html
+++ b/project/2.html
@@ -12,7 +12,7 @@
     <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
             <div id="navbar">
       <a href="1.html">Home</a>
-      <a href="2.html">About me</a>
+      <a href="2.html">Cool stuff</a>
       <a href="https://www.w3schools.com/">w3schools</a>
             </div>
     <center>
