center Class Name

--- a/project/1.html
+++ b/project/1.html
@@ -18,7 +18,7 @@
         <h1>Welcome to my site.</h1>
         <table style="width:80%">
             <tr>
-                <th>class Name</th>
+                <center><th>Class Name</th></center>
                 <th>Period #</th>
             </tr>
             <tr>
